A few cosmetic tweaks to avoid scrolling on mobile

--- a/src/components/Deck.css
+++ b/src/components/Deck.css
@@ -3,7 +3,8 @@
 }
 
 .definitions {
-    height: 400px;
+    height: 360px;
+    padding-top: 0;
 }
 
 .header span {
